--- a/ubuntu_24.04/firefox-themes/Monterey/theme-alt.css
+++ b/ubuntu_24.04/firefox-themes/Monterey/theme-alt.css
@@ -32,4 +32,5 @@
 #customization-container {
 	background-color: var(--gnome-browser-before-load-background) !important;
 	color: var(--gnome-toolbar-color) !important;
+	background-image: none !important;
 }
