--- a/ubuntu_24.04/firefox-themes/Monterey/parts/headerbar.css
+++ b/ubuntu_24.04/firefox-themes/Monterey/parts/headerbar.css
@@ -33,7 +33,14 @@ toolbar .toolbaritem-combined-buttons > .toolbarbutton-1 {
 	background: none !important;
 }
 
-#nav-bar .toolbaritem-combined-buttons {
+#nav-bar .toolbaritem-combined-buttons:not(.unified-extensions-item) {
+	padding: 0 !important;
+	margin: 0 2px !important;
+	border-radius: 8px !important;
+	background: var(--gnome-headerbar-button-combined-background) !important;
+}
+
+#nav-bar .toolbaritem-combined-buttons toolbarbutton:not(#urlbar-zoom-button) {
 	margin: 0 !important;
 }
 
@@ -91,7 +98,8 @@ toolbar .toolbaritem-combined-buttons > .toolbarbutton-1 {
 
 /* Headerbar entries */
 #nav-bar #searchbar,
-#urlbar #urlbar-input-container {
+#urlbar #urlbar-input-container,
+#urlbar .urlbar-input-container {
 	-moz-appearance: none !important;
 	background: var(--gnome-urlbar-background) !important;
 	border: none !important;
@@ -105,18 +113,22 @@ toolbar .toolbaritem-combined-buttons > .toolbarbutton-1 {
 }
 
 :root:-moz-window-inactive #nav-bar #searchbar,
-:root:-moz-window-inactive #urlbar #urlbar-input-container {
+:root:-moz-window-inactive #urlbar #urlbar-input-container,
+:root:-moz-window-inactive #urlbar .urlbar-input-container {
 	background: var(--gnome-inactive-urlbar-background) !important;
 }
 
 #nav-bar #searchbar:hover,
-#urlbar #urlbar-input-container:hover {
+#urlbar #urlbar-input-container:hover,
+#urlbar .urlbar-input-container:hover {
 	box-shadow: inset 0 0 0 1px var(--gnome-hover-urlbar-border-color) !important;
 	transition-duration: 100ms;
 }
 
 #urlbar[breakout][breakout-extend] #urlbar-input-container,
-#urlbar[breakout][breakout-extend] #urlbar-input-container:hover {
+#urlbar[breakout][breakout-extend] #urlbar-input-container:hover,
+#urlbar[breakout][breakout-extend] .urlbar-input-container,
+#urlbar[breakout][breakout-extend] .urlbar-input-container:hover {
 	background: none !important;
 	box-shadow: none !important;
 	padding: 0 3px !important;
