--- a/ubuntu_24.04/firefox-themes/Monterey/parts/tabsbar-alt.css
+++ b/ubuntu_24.04/firefox-themes/Monterey/parts/tabsbar-alt.css
@@ -49,7 +49,7 @@ tab > stack {
 
 .tab-background {
 	margin: 0 !important;
-	transition: all 200ms;
+	transition: background 200ms;
 	margin-block: 0 !important;
 }
 
