--- a/ubuntu_24.04/firefox-themes/Monterey/parts/toolbox.css
+++ b/ubuntu_24.04/firefox-themes/Monterey/parts/toolbox.css
@@ -7,23 +7,20 @@
 
 @namespace xul "http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul";
 
-#nav-bar,
-#PersonalToolbar,
-#toolbar-menubar,
-#titlebar {
-  color: var(--gnome-toolbar-color);
-  background: var(--gnome-toolbar-background) !important;
-  border: none !important;
+#nav-bar, #PersonalToolbar, #toolbar-menubar, #titlebar {
+	color: var(--gnome-toolbar-color);
+	background: var(--gnome-toolbar-background) !important;
+	border: none !important;
 }
 
 #PersonalToolbar {
-  border-bottom: 1px solid var(--gnome-toolbar-border-color) !important;
+	border-bottom: 1px solid var(--gnome-toolbar-border-color) !important;
 }
 
 findbar {
-  border: none !important;
-  background: var(--gnome-findbar-background) !important;
-  border-top: 1px solid var(--gnome-toolbar-border-color) !important;
+	border: none !important;
+	background: var(--gnome-findbar-background) !important;
+	border-top: 1px solid var(--gnome-toolbar-border-color) !important;
 }
 
 #nav-bar:-moz-window-inactive,
@@ -31,108 +28,104 @@ findbar {
 #toolbar-menubar:-moz-window-inactive,
 findbar:-moz-window-inactive,
 #titlebar:-moz-window-inactive {
-  background: var(--gnome-inactive-toolbar-background) !important;
+	background: var(--gnome-inactive-toolbar-background) !important;
 }
 
 /* Toolbox colors */
 #navigator-toolbox {
-  border: none !important;
-  background: none !important;
+	border: none !important;
+	background: none !important;
 }
 
 .toolbarbutton-icon {
-  color: var(--gnome-toolbar-color);
-  fill: var(--gnome-toolbar-color);
+	color: var(--gnome-toolbar-color);
+	fill: var(--gnome-toolbar-color);
 }
 
 #titlebar {
-  min-height: 0 !important;
-  max-height: 42px !important;
+	min-height: 0 !important
+	max-height: 42px !important;
 }
 
 #TabsToolbar {
-  margin-top: -50px !important;
-  margin-bottom: 8px !important;
-  padding: 0 !important;
-  background: none !important;
-  max-height: 42px !important;
+	margin-top: -40px !important;
+	margin-bottom: 8px !important;
+	padding: 0 !important;
+	background: none !important;
+	max-height: 42px !important;
 }
 
 #nav-bar {
-  border: none !important;
-  box-shadow: none !important;
+	border: none !important;
+	box-shadow: none !important;
 }
 
 /* allow to drag headerbar empty space */
 :root[tabsintitlebar] #nav-bar .chromeclass-location {
-  -moz-window-dragging: drag !important;
+	-moz-window-dragging: drag !important;
 }
 
-#toolbar-menubar:not([inactive="true"]) {
-  margin-bottom: 0 !important;
+#toolbar-menubar:not([inactive=true]) {
+	margin-bottom: 0 !important;
 }
 
-#navigator-toolbox #nav-bar,
-findbar {
-  -moz-box-ordinal-group: 0;
-  order: 0;
+#navigator-toolbox #nav-bar, findbar {
+	-moz-box-ordinal-group: 0;
+	order: 0;
 }
 #navigator-toolbox #PersonalToolbar {
-  -moz-box-ordinal-group: 10;
-  order: 10;
+	-moz-box-ordinal-group: 10;
+	order: 10;
 }
 #navigator-toolbox #titlebar {
-  -moz-box-ordinal-group: 1;
-  order: 1;
+	-moz-box-ordinal-group: 1;
+	order: 1;
 }
 #navigator-toolbox toolbar {
-  -moz-box-ordinal-group: 3;
-  order: 3;
+	-moz-box-ordinal-group: 3;
+	order: 3;
 }
 #navigator-toolbox #TabsToolbar {
-  -moz-box-ordinal-group: 2;
-  order: 2;
+	-moz-box-ordinal-group: 2;
+	order: 2;
 }
 
 #PersonalToolbar {
-  padding: 0 3px 3px !important;
-  height: 32px !important;
-  max-height: 32px !important;
+	height: 28px !important;
+	max-height: 28px !important;
+	padding: 0 2px !important;
+	--bookmarks-toolbar-overlapping-browser-height: auto;
 }
 
 /* Sidebar */
-#sidebar-box,
-#sidebar,
+#sidebar-box, #sidebar,
 .sidebar-panel[lwt-sidebar] {
-  color: var(--gnome-toolbar-color) !important;
-  background: var(--gnome-toolbar-background) !important;
+	color: var(--gnome-toolbar-color) !important;
+	background: var(--gnome-toolbar-background) !important;
 }
 
 .sidebar-splitter {
-  width: 1px !important;
-  background-color: var(--gnome-toolbar-border-color) !important;
-  border: none !important;
+	width: 1px !important;
+	background-color: var(--gnome-toolbar-border-color) !important;
+	border: none !important;
 }
 
 /* Customization page */
 #customization-container:-moz-lwtheme {
-  background-image: linear-gradient(
-    var(--gnome-browser-before-load-background),
-    var(--gnome-browser-before-load-background)
-  ) !important;
+	background-image: linear-gradient(var(--gnome-browser-before-load-background), var(--gnome-browser-before-load-background)) !important;
 }
 
 #customization-footer {
-  border-top: 1px solid var(--gnome-toolbar-border-color) !important;
-  color: var(--gnome-toolbar-color) !important;
-  background: var(--gnome-toolbar-background) !important;
-  border-radius: 0 0 12px 12px !important;
+	border-top: 1px solid var(--gnome-toolbar-border-color) !important;
+	color: var(--gnome-toolbar-color) !important;
+	background: var(--gnome-toolbar-background) !important;
+	border-radius: 0 0 12px 12px !important;
 }
 
 /* bookmark-item */
 toolbarbutton.bookmark-item {
-  padding: 3px 6px !important;
-  margin: 0 2px !important;
-  border-radius: 3px !important;
-  max-height: 24px !important;
+	padding: 3px 6px !important;
+	margin: 0 2px !important;
+	border-radius: 3px !important;
+	max-height: 24px !important;
 }
