--- a/ubuntu_24.04/firefox-themes/customChrome.css
+++ b/ubuntu_24.04/firefox-themes/customChrome.css
@@ -1,30 +1,34 @@
-/*================== Simplify Darkish Gray for Firefox ==================
-Author: dpcdpc11.gumroad.com
-ENJOY!
-*/
 
-/*================ GLOBAL COLORS ================*/
-
-:root {
-  --accent-color: 60, 56, 54;
-  --secondary-accent-color: 235, 219, 178;
-  --third-accent-color: 235, 219, 178;
-  --light-color: 255, 255, 255;
-  /* --dark-color: 60, 56, 54; */
-  --dark-color: #2D2A2E;
-  --caption-min-color: 215, 153, 33;
-  --caption-max-color: 69, 133, 136;
-  --caption-close-color: 177, 98, 134;
-}
-
-#nav-bar, #PersonalToolbar, #toolbar-menubar, #titlebar {
-        color: var(--gnome-toolbar-color);
-        background: var(--dark-color) !important;
-        border: none !important;
-}
+/* Add your own custom styles here */
 
 #TabsToolbar {
-  margin-top: -52px !important;
-  margin-left: 550px !important;
- margin-bottom: 0px !important;
-}
+    margin-top: -52px !important;
+    margin-left: 380px !important;
+    margin-bottom: 0px !important;
+  }
+
+
+/* Hide the back button */
+#back-button {
+    display: none !important;
+  }
+
+  /* Hide the forward button */
+  #forward-button {
+    display: none !important;
+  }
+
+  /* Hide the reload button */
+  #reload-button {
+    display: none !important;
+  }
+
+  /* Hide the home button */
+  #home-button {
+    display: none !important;
+  }
+
+  /* Hide the downloads button */
+  #downloads-button {
+    display: none !important;
+  }
